[package]
name = "DDNS_TrafficManager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
public-ip = "0.2"
ureq = { version= "2.0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }